# ModelMirror

./: .gitignore  AGENTS_SKILLS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_SPEC.md  README.md  ROADMAP.md  SECURITY.md  TECH_SPECS.md  pyproject.toml
.github/workflows/: tests.yml
codex_prompts/: CODEX_INTEGRATE_INVESTIGATE.md  CODEX_INTEGRATE_OPERATE.md  CODEX_PACK_SCHEMA_ADAPTER.md
examples/sample_run/: eval_result.json  packed_prompt.json  run_manifest.json
frameworks/: autogen.md  crewai.md  google_adk.md  langgraph.md  openai_agents_sdk.md
src/model_mirror/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  diffing.py  io_utils.py  models.py  run_flow.py  suggestions.py  ui_app.py  validation.py
suggestions/: suggestion_library.json
templates/: eval_result.example.json  packed_prompt.example.json  packed_prompt.minimal.json
tests/: test_diagnostics.py  test_diffing.py  test_io_and_hash.py  test_models_validation.py
