[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-mirror"
version = "0.1.0"
description = "Offline human prompt-pack debugger"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ModelMirror Contributors" }]
dependencies = [
  "streamlit>=1.35",
  "pydantic>=2.0",
  "jsonschema>=4.0"
]

[project.urls]
Homepage = "https://roopsdevassist.com/modelmirror/"
Repository = "https://github.com/Roop-World/ModelMirror"
Changelog = "https://github.com/Roop-World/ModelMirror/blob/main/CHANGELOG.md"
Issues = "https://github.com/Roop-World/ModelMirror/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
